--- a/Oblig1Innovation-camp/assets/style/w250.css
+++ b/Oblig1Innovation-camp/assets/style/w250.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 376px) {
+@media only screen and (max-width: 275px) {
     * {
         font-family: sans-serif;
     }
@@ -13,15 +13,21 @@
         flex-direction: row;
         flex-wrap: wrap;
         align-items: flex-start;
+        align-items: center;
     }
 
     .nav-logo {
         margin: 10px;
         display: flex;
-        justify-content: center;
         flex: 1;
         font-size: 18px;
     
+    }
+
+    .logo-name {
+        padding: 10px;
+        height: 50px;
+        width: 60px;
     }
 
 
@@ -75,7 +81,7 @@
     .main-body {
         color: yellow;
         height: 95vh;
-        font-size: 18px;
+        font-size: 24px;
     }
 
     .thesis {
@@ -83,7 +89,7 @@
     }
 
     .thesis span {
-        font-size: 20px;
+        font-size: 16px;
     }
 
     .info-challenge {
@@ -91,14 +97,14 @@
     }
 
     .info-challenge h1 {
-        font-size: 20px;
+        font-size: 16px;
     }
 
     
     .info-challenge p {
         padding: 20px 20px 20px 0px;
         line-height: 1.5;
-        font-size: 14px;
+        font-size: 9px;
     }
 
     
@@ -131,9 +137,9 @@
         justify-content: center;
         align-items: center;
         background-color: #F6F7EB;
-        font-size: 14px;
-        height: 75px;
-        width: 75px;
+        font-size: 12px;
+        height: 50px;
+        width: 50px;
         border-radius: 100%;
         color: white;
     }
