--- a/Oblig1Innovation-camp/assets/style/w350.css
+++ b/Oblig1Innovation-camp/assets/style/w350.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 376px) {
+@media only screen and (min-width:275px) and (max-width: 350px) {
     * {
         font-family: sans-serif;
     }
@@ -13,15 +13,21 @@
         flex-direction: row;
         flex-wrap: wrap;
         align-items: flex-start;
+        align-items: center;
     }
 
     .nav-logo {
         margin: 10px;
         display: flex;
-        justify-content: center;
         flex: 1;
         font-size: 18px;
     
+    }
+
+    .logo-name {
+        padding: 10px;
+        height: 50px;
+        width: 60px;
     }
 
 
