--- a/Oblig1Innovation-camp/assets/style/main.css
+++ b/Oblig1Innovation-camp/assets/style/main.css
@@ -31,39 +31,34 @@ html {
 }
 
 .nav-logo {
-    font-size: 24px;
-    text-transform: uppercase;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     flex: 1;
-
 }
 
 .nav-menu {
-    font-size: 22px;
     display: flex;
     justify-content: flex-end;
     flex: 3;
-    
 }
 
 .nav-menu ul {
-    list-style: none;
+    padding-left: 0px;
 }
 
 .nav-menu ul li {
     display: inline;
+    list-style: none;
     padding-right: 50px;
 }
 
 .nav-menu ul li a {
-    text-decoration: none;
+    font-size: 24px;
+    text-decoration-line: none;
+
 }
 
-.nav-menu ul li:hover {
-    opacity: 0.5;
-    transition: 0.2s;
-    
-}
+
 
 .main-body {
     display: flex;
