--- a/Oblig1Innovation-camp/assets/style/w400.css
+++ b/Oblig1Innovation-camp/assets/style/w400.css
@@ -32,6 +32,7 @@
 
     .nav-menu {
         flex-basis: 100%;
+        border-style: solid;
         font-size: 20px;
     }
 
@@ -40,8 +41,6 @@
         flex-direction: column;
         justify-content: center;
         width: 100%;
-        height: 94vh;
-        position: absolute;
         background-color:  #212A3B;
         text-align: center; 
         z-index: 1;
