--- a/Oblig1Innovation-camp/assets/style/w250.css
+++ b/Oblig1Innovation-camp/assets/style/w250.css
@@ -8,60 +8,63 @@
     }
 
     .nav {
-        width: 100%;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: flex-start;
+        flex-direction: column;
         align-items: center;
     }
 
-    .nav-logo {
-        margin: 10px;
-        display: flex;
-        flex: 1;
-        font-size: 18px;
-    }
-
     .logo-name {
-        padding: 10px;
+        padding: 0px;
         height: 50px;
         width: 60px;
     }
+    
+    .nav-logo {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex: 1;
+    }
 
     .nav-menu {
-        flex-basis: 100%;
-        font-size: 20px;
-    }
-
-    .nav-menu ul  {
-        display:flex;
+        margin: 20px;
+        display: flex;
         flex-direction: column;
         justify-content: center;
+        flex: 3;
         width: 100%;
-        height: 94vh;
-        position: absolute;
-        background-color:  #212A3B;
-        text-align: center; 
-        z-index: 1;
     }
-
+    
+    .nav-menu ul {
+        text-align: center;
+        
+    }
+    
     .nav-menu ul li {
-        margin: 0px;
-        padding: 20px;
         display: block;
+        list-style: none;
+        padding-top: 15px;
+        padding-bottom: 15px;
+
     }
 
     .nav-menu ul li:nth-child(odd) {
+        display: block;
+        list-style: none;
+        padding-top: 15px;
         border-top-style: solid;
         border-bottom-style: solid;
         border-width: 1px;
-        border-color: white;
+    }
+    
+    .nav-menu ul li a {
+        font-size: 20px;
+        text-decoration-line: none;
+        padding-left: 50px;
     }
 
-    .nav-menu ul li a {
-        color: white;
-
+    .scroll-button {
+        display: none;
     }
 
 
