--- a/Oblig1Innovation-camp/assets/style/main.css
+++ b/Oblig1Innovation-camp/assets/style/main.css
@@ -26,8 +26,8 @@ html {
 
 .logo-name {
     padding: 10px;
-    height: 100px;
-    width: 110px;
+    height: 70px;
+    width: 80px;
 }
 
 .nav-logo {
@@ -53,7 +53,7 @@ html {
 }
 
 .nav-menu ul li a {
-    font-size: 24px;
+    font-size: 20px;
     text-decoration-line: none;
 
 }
@@ -145,7 +145,7 @@ html {
 
 .footer {
     display: flex;
-    height: 25vh;
+    height: 20vh;
     background-color: #212A3B;
     align-items: center;
     justify-content: space-evenly;
@@ -165,4 +165,32 @@ html {
 
 .footer div:hover {
     cursor: pointer;
+}
+
+.facing-challenge {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height:69.8vh;
+}
+
+
+.facing-challenge div {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 20px;
+    background-color: #F6F7EB;
+}
+
+.facing-challenge div img {
+    width: 100%;
+    height: 60%;
+}
+
+.facing-challenge p {
+    padding: 20px 20px 20px 0px;
+    line-height: 1.5;
+    font-size: 20px;
 }
