--- a/Oblig1Innovation-camp/assets/style/w350.css
+++ b/Oblig1Innovation-camp/assets/style/w350.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width:275px) and (max-width: 350px) {
     * {
-        font-family: sans-serif;
-    }
+        font-family: 'Arvo';
+        }
 
     html {
         overflow: scroll;
@@ -43,22 +43,22 @@
     .nav-menu ul li {
         display: block;
         list-style: none;
-        padding-top: 15px;
-        padding-bottom: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px;
 
     }
 
     .nav-menu ul li:nth-child(odd) {
         display: block;
         list-style: none;
-        padding-top: 15px;
+        padding-top: 10px;
         border-top-style: solid;
         border-bottom-style: solid;
         border-width: 1px;
     }
     
     .nav-menu ul li a {
-        font-size: 20px;
+        font-size: 16px;
         text-decoration-line: none;
         padding-left: 50px;
     }
