--- a/Oblig1Innovation-camp/assets/style/w400.css
+++ b/Oblig1Innovation-camp/assets/style/w400.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 350px) and (max-width: 400px) {
     * {
-        font-family: sans-serif;
+        font-family: 'Arvo';
     }
 
     html {
