--- a/Oblig1Innovation-camp/assets/style/w250.css
+++ b/Oblig1Innovation-camp/assets/style/w250.css
@@ -115,23 +115,36 @@
     }
 
     .footer {
-        display: flex;
-        height: 25vh;
         background-color: #212A3B;
-        align-items: center;
-        justify-content: space-evenly;
+    }
+
+    .facing-challenge {
+        display: flex;
+        flex-direction: column;
+        min-height:69.8vh;
     }
     
-    .footer div {
+    .facing-challenge div {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+        flex: 1;
+        padding: 20px;
         background-color: #F6F7EB;
-        font-size: 12px;
-        height: 50px;
-        width: 50px;
-        border-radius: 100%;
-        color: white;
+    }
+
+    .facing-challenge div:nth-child(odd){
+        align-items: center;
+    }
+    
+    .facing-challenge div img {
+        width: 70%;
+        height: 80%;
+    }
+    
+    .facing-challenge p {
+        padding: 20px 20px 20px 0px;
+        line-height: 1.2;
+        font-size: 14px;
     }
 
 
