--- a/Oblig1Innovation-camp/assets/style/w400.css
+++ b/Oblig1Innovation-camp/assets/style/w400.css
@@ -115,23 +115,37 @@
     }
 
     .footer {
-        display: flex;
-        height: 25vh;
         background-color: #212A3B;
-        align-items: center;
-        justify-content: space-evenly;
     }
     
-    .footer div {
+
+    .facing-challenge {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+        min-height:69.8vh;
+    }
+    
+    .facing-challenge div {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        padding: 20px;
         background-color: #F6F7EB;
+    }
+
+    .facing-challenge div:nth-child(odd){
+        align-items: center;
+    }
+    
+    .facing-challenge div img {
+        width: 70%;
+        height: 80%;
+    }
+    
+    .facing-challenge p {
+        padding: 20px 20px 20px 0px;
+        line-height: 1.2;
         font-size: 14px;
-        height: 75px;
-        width: 75px;
-        border-radius: 100%;
-        color: white;
     }
 
 
