--- a/Oblig1Innovation-camp/assets/style/main.css
+++ b/Oblig1Innovation-camp/assets/style/main.css
@@ -144,22 +144,55 @@ html {
 }
 
 .footer {
+    display: flex;
+    height: 13.5vh;
     background-color: #212A3B;
-    height: 20vh;
+    justify-content: space-evenly;
 }
 
-.footer div:hover {
-    cursor: pointer;
+.footer div {
+    margin: 20px;
 }
 
-.facing-challenge {
+.foot-menu {
+    color: white;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+}
+
+.foot-menu a {
+    text-decoration: none;
+    color: white;
+}
+
+.foot-menu ul li:first-child {
+    border-bottom-style: solid;
+    border-width: 1px;
+}
+
+.info p, .info p strong,.info a {
+    font-size: 12px;
+    color: white;
+}
+
+.copyright p {
+    font-size: 12px;
+    color: white;
+}
+
+
+.facing-challenge, .solutions {
     display: flex;
     flex-direction: row;
-    height:69.8vh;
+    height:76.3vh;
 }
 
+.solutions {
+    height: 95vh;
+}
 
-.facing-challenge div {
+.facing-challenge div, .solutions div {
     justify-content: center;
     display: flex;
     flex-direction: column;
@@ -168,9 +201,20 @@ html {
     background-color: #F6F7EB;
 }
 
+.solutions div:first-child {
+    align-items: center;
+}
+
 .facing-challenge div img {
     width: 100%;
     height: 60%;
+}
+
+.solutions div img {
+    width: 80%;
+    height: 80%;
+    border-radius: 5px;
+    
 }
 
 .facing-challenge p {
@@ -178,3 +222,99 @@ html {
     line-height: 1.5;
     font-size: 20px;
 }
+
+.solutions p {
+    padding: 20px 20px 20px 0px;
+    line-height: 1.5;
+    font-size: 18px;
+}
+
+.technology {
+    min-height: 25vh;
+    background-color: #F4F4F4;
+}
+
+.technology div {
+    padding: 20px 20px 20px 20px;   
+}
+
+.technology h1 {
+    text-decoration: underline;
+}
+
+.technology p {
+    padding-top: 10px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.visualization {
+    display: flex;
+    flex-direction: row;
+    min-height: 35vh;
+    background-color: #F6F7EB;
+}
+
+.visualization div{
+    flex: 1;
+}
+
+
+
+.visualization div img {
+    width: 100%;
+    height: 100%;
+}
+
+.visualization div:last-child {
+    padding: 20px 20px 20px 20px;   
+}
+
+.visualization h1 {
+    text-decoration: underline;
+}
+
+.visualization p {
+    padding-top: 10px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+
+.goal {
+    display: flex;
+    flex-direction: row;
+    min-height: 35vh;
+    background-color: #F4F4F4;
+}
+
+.goal div:first-child {
+    flex: 1;
+}
+
+.goal div:last-child {
+    flex: 1.1;
+    
+}
+
+.goal div img {
+    width: 100%;
+    height: 100%;
+}
+
+.goal div{
+    padding: 20px 20px 20px 20px;   
+}
+
+.goal h1 {
+    text-decoration: underline;
+}
+
+.goal p {
+    padding-top: 10px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+
+
