--- a/Oblig1Innovation-camp/assets/style/w400.css
+++ b/Oblig1Innovation-camp/assets/style/w400.css
@@ -43,22 +43,22 @@
     .nav-menu ul li {
         display: block;
         list-style: none;
-        padding-top: 15px;
-        padding-bottom: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px;
 
     }
 
     .nav-menu ul li:nth-child(odd) {
         display: block;
         list-style: none;
-        padding-top: 15px;
+        padding-top: 10px;
         border-top-style: solid;
         border-bottom-style: solid;
         border-width: 1px;
     }
     
     .nav-menu ul li a {
-        font-size: 20px;
+        font-size: 13px;
         text-decoration-line: none;
         padding-left: 50px;
     }
@@ -115,17 +115,32 @@
     }
 
     .footer {
-        background-color: #212A3B;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        min-height: 20vh;
+        position: relative;
     }
-    
 
-    .facing-challenge {
+    .footer div {
+        color: white;
+        width: 40%;
+        margin: 5px;
+    }
+
+    .footer div:last-child {
+        width: 100%;
+        text-align: center;
+    }
+
+    .facing-challenge, .solutions {
         display: flex;
         flex-direction: column;
         min-height:69.8vh;
     }
     
-    .facing-challenge div {
+    .facing-challenge div, .solutions div {
         display: flex;
         flex-direction: column;
         flex: 1;
@@ -133,20 +148,103 @@
         background-color: #F6F7EB;
     }
 
-    .facing-challenge div:nth-child(odd){
+    .facing-challenge div:nth-child(odd), .solutions div:nth-child(odd){
         align-items: center;
     }
     
-    .facing-challenge div img {
-        width: 70%;
-        height: 80%;
-    }
-    
-    .facing-challenge p {
-        padding: 20px 20px 20px 0px;
-        line-height: 1.2;
-        font-size: 14px;
+    .facing-challenge div img, .solutions div img {
+        width: 100%;
+        height: 100%;
     }
 
+    .facing-challenge h1, .solutions h1 {
+        font-size: 14px;
+    }
+    
+    .facing-challenge p, .solutions p {
+        padding: 20px 20px 20px 0px;
+        line-height: 1.2;
+        font-size: 12px;
+    }
+
+    .facing-challenge p {
+        padding: 5px 20px 20px 0px;
+        line-height: 1;
+        font-size: 12px;
+    }
+
+    .facing-challenge ul li, .solutions ul li {
+        font-size: 12px;
+    }
+    
+    .foot-menu {
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        color: white;
+        font-size: 12px;
+    }
+
+    .foot-menu a{
+        color: white;
+        font-size: 10px;
+        text-decoration: none;
+    }
+    
+    .info p, .info p strong,.info a {
+        font-size: 9px;
+        color: white;
+    }
+    
+    .copyright p {
+        font-size: 8px;
+        color: white;
+    }
+
+    .visualization {
+        flex-direction: column;
+    }
+
+        .solutions div:first-child {
+        display: none;
+    }
+
+    .solutions p {
+        font-size: 13px;
+    }
+
+    .solutions h1 {
+        font-size: 16px;
+        
+    }
+
+    .technology h1 {
+        font-size: 16px;
+    }
+    
+    .technology p{
+        font-size: 13px;
+    }
+
+    .visualization h1 {
+        font-size: 16px;
+    }
+    
+    .visualization p{
+        font-size: 13px;
+    }
+    
+    .visualization div img {
+        height: 100%;
+        width: 100%;
+    }
+
+    .goal h1 {
+        font-size: 16px;
+    }
+    
+    .goal p {
+        font-size: 13px;
+    }
 
 }
