--- a/Oblig1Innovation-camp/assets/style/w760.css
+++ b/Oblig1Innovation-camp/assets/style/w760.css
@@ -58,7 +58,7 @@
     }
     
     .nav-menu ul li a {
-        font-size: 20px;
+        font-size: 15px;
         text-decoration-line: none;
         padding-left: 50px;
     }
@@ -114,19 +114,31 @@
     }
 
     .footer {
-        background-color: #212A3B;
-
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        min-height: 20vh;
+        position: relative;
     }
-    
 
+    .footer div {
+        color: white;
+    }
 
-    .facing-challenge {
+    .footer div:last-child {
+        width: 100%;
+        text-align: center;
+    }
+
+    .facing-challenge, .solutions {
         display: flex;
         flex-direction: column;
         min-height:69.8vh;
     }
     
-    .facing-challenge div {
+    .facing-challenge div, .solutions div {
         display: flex;
         flex-direction: column;
         flex: 1;
@@ -134,20 +146,96 @@
         background-color: #F6F7EB;
     }
 
-    .facing-challenge div:nth-child(odd){
+    .facing-challenge div:nth-child(odd), .solutions:nth-child(odd) {
         align-items: center;
     }
     
-    .facing-challenge div img {
+    .facing-challenge div img, .solutions div img {
         width: 70%;
         height: 80%;
     }
+
+    .facing-challenge h1, .solutions h1 {
+        font-size: 18px;
+    }
     
-    .facing-challenge p {
+    .facing-challenge p, .solutions p{
         padding: 20px 20px 20px 0px;
         line-height: 1.2;
         font-size: 14px;
     }
+
+    .facing-challenge ul li, .solutions ul li {
+        font-size: 14px;
+    }
+    
+    .foot-menu {
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        color: white;
+        font-size: 12px;
+    }
+
+    .foot-menu a{
+        color: white;
+        font-size: 10px;
+        text-decoration: none;
+    }
+    
+    .info p, .info p strong,.info a {
+        font-size: 9px;
+        color: white;
+    }
+    
+    .copyright p {
+        font-size: 8px;
+        color: white;
+    }
+
+    .visualization {
+        flex-direction: column;
+    }
+
+    .solutions p {
+        font-size: 13px;
+    }
+
+    .solutions h1 {
+        font-size: 16px;
+        
+    }
+
+    .technology h1 {
+        font-size: 16px;
+    }
+    
+    .technology p{
+        font-size: 13px;
+    }
+
+    .visualization h1 {
+        font-size: 16px;
+    }
+    
+    .visualization p{
+        font-size: 13px;
+    }
+    
+    .visualization div img {
+        height: 100%;
+        width: 100%;
+    }
+
+    .goal h1 {
+        font-size: 16px;
+    }
+    
+    .goal p {
+        font-size: 13px;
+    }
+
+}
     
 
 
